<resources>
    <string name="google_maps_key"> COPY THE VALUE FROM GOOGLE CLOUD PLATFORM </string>
    <string name="app_name">Money Tracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_bill">BILL</string>
    <string name="add_bill_amount">ADD_Bill</string>
    <string name="add_education">EDUCATION</string>
    <string name="add_food">FOOD</string>
    <string name="add_fuel">FUEL</string>
    <string name="add_health">HEALTH</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_categories">Helllo</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_bill1">Add BILL</string>
    <string name="add_food1">ADD FOOD</string>
    <string name="add_education1">ADD EDUCATION</string>
    <string name="add_fuel1">ADD FUEL</string>
    <string name="add_health1">ADD HEALTH</string>
    <string name="edt_edu">EDUCATION</string>
    <string name="edu">0.00</string>
    <string name="bill">0.00</string>
    <string name="edt_food">FOOD</string>
    <string name="food">0.00</string>
    <string name="edt_fuel">FUEL</string>
    <string name="fuel">0.00</string>
    <string name="edt_health">HEALTH</string>
    <string name="health">0.00</string>
    <string name="name1">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password2">Re password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="Edit_Profile">Edit</string>
    <string name="Edit_Details">Edit Profile</string>
    <string name="FirstName">FirstName</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">Email</string>
    <string name="btn_started">Get\tStarted</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="balance">Balance</string>
    <string name="home">HOME</string>
    <string name="cate">CATEGORY</string>
    <string name="notification">NOTIFICATION</string>
    <string name="edt">EDIT</string>
    <string name="close">CLOSE</string>
    <string name="enter_income">INCOME</string>
    <string name="enter_email">ENTER EMAIL</string>
    <string name="enter_password">ENTER PASSSWORD</string>
    <string name="edt_profile">EDIT PROFILE</string>
    <string name="view_notification">Notifications</string>
    <string name="not_msg">Your income is updated......</string>
    <string name="close_">CLOSE</string>
</resources>