<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/lwidth"
        android:layout_height="@dimen/lhight"
        android:layout_marginStart="@dimen/lmst"
        android:layout_marginTop="@dimen/lmtop"
        android:layout_marginEnd="@dimen/lmst"
        android:layout_marginBottom="@dimen/lbtm"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/food" />

    <EditText
        android:id="@+id/editTextNumberSigned"
        android:layout_width="@dimen/income"
        android:layout_height="@dimen/income"
        android:layout_marginStart="@dimen/lbtm"
        android:layout_marginTop="@dimen/lmst"
        android:layout_marginEnd="@dimen/lmst"
        android:layout_marginBottom="@dimen/lmbt3"
        android:backgroundTint="@color/theme"
        android:ems="10"
        android:hint="Enter the amount"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textColorHighlight="@color/theme"
        android:textColorHint="@color/theme"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="@dimen/income"
        android:layout_height="@dimen/income"
        android:layout_marginStart="@dimen/lmtop"
        android:layout_marginTop="@dimen/lbtm"
        android:layout_marginEnd="@dimen/lmtop"
        android:layout_marginBottom="@dimen/lmbt2"
        android:text="@string/add_food"
        android:textColor="@color/theme"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="@dimen/income"
        android:layout_height="@dimen/income"
        android:layout_marginStart="@dimen/lmtop"
        android:layout_marginTop="@dimen/lmtop"
        android:layout_marginEnd="@dimen/lmtop"
        android:layout_marginBottom="@dimen/lmtop"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/cate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton9"
        app:layout_constraintStart_toEndOf="@+id/imageButton8"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/baseline_category_24" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="@dimen/income"
        android:layout_height="@dimen/income"
        android:layout_marginStart="@dimen/lmtop"
        android:layout_marginTop="@dimen/lmtop"
        android:layout_marginEnd="@dimen/lmtop"
        android:layout_marginBottom="@dimen/lmtop"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/baseline_home_24" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="@dimen/income"
        android:layout_height="@dimen/income"
        android:layout_marginStart="@dimen/lmtop"
        android:layout_marginTop="@dimen/lmtop"
        android:layout_marginEnd="@dimen/lmtop"
        android:layout_marginBottom="@dimen/lmtop"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/notification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/baseline_notifications_24" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/lwidth2"
        android:layout_height="@dimen/lheight2"
        android:layout_marginStart="@dimen/lmst"
        android:layout_marginTop="@dimen/margintop"
        android:layout_marginEnd="@dimen/lbtm"
        android:backgroundTint="@color/theme"
        android:text="@string/add_food1"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberSigned" />

</androidx.constraintlayout.widget.ConstraintLayout>